--- a/my-todo-app/package.json
+++ b/my-todo-app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.34",
+    "antd": "^5.23.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "styled-components": "^6.1.14"
